@@ -17,18 +17,18 @@
 
 package org.apache.solr.core.backup.repository;
 
+import com.google.common.base.Preconditions;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
+import java.nio.file.LinkOption;
+import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.SimpleFileVisitor;
-import java.nio.file.attribute.BasicFileAttributes;
+import java.util.Collection;
 import java.util.Objects;
-
+import org.apache.commons.io.file.PathUtils;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.FSDirectory;
 import org.apache.lucene.store.IOContext;
@@ -38,19 +38,17 @@ import org.apache.lucene.store.NoLockFactory;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.core.DirectoryFactory;
 
-import com.google.common.base.Preconditions;
-
 /**
- * A concrete implementation of {@linkplain BackupRepository} interface supporting backup/restore of Solr indexes to a
- * local file-system. (Note - This can even be used for a shared file-system if it is exposed via a local file-system
- * interface e.g. NFS).
+ * A concrete implementation of {@linkplain BackupRepository} interface supporting backup/restore of
+ * Solr indexes to a local file-system. (Note - This can even be used for a shared file-system if it
+ * is exposed via a local file-system interface e.g. NFS).
  */
 public class LocalFileSystemRepository implements BackupRepository {
-  @SuppressWarnings("rawtypes")
-  private NamedList config = null;
+
+  private NamedList<?> config = null;
 
   @Override
-  public void init(@SuppressWarnings("rawtypes") NamedList args) {
+  public void init(NamedList<?> args) {
     this.config = args;
   }
 
@@ -68,10 +66,10 @@ public class LocalFileSystemRepository implements BackupRepository {
     try {
       result = new URI(location);
       if (!result.isAbsolute()) {
-        result = Paths.get(location).toUri();
+        result = Path.of(location).toUri();
       }
     } catch (URISyntaxException ex) {
-      result = Paths.get(location).toUri();
+      result = Path.of(location).toUri();
     }
 
     return result;
@@ -81,9 +79,14 @@ public class LocalFileSystemRepository implements BackupRepository {
   public URI resolve(URI baseUri, String... pathComponents) {
     Preconditions.checkArgument(pathComponents.length > 0);
 
-    Path result = Paths.get(baseUri);
+    Path result = Path.of(baseUri);
     for (int i = 0; i < pathComponents.length; i++) {
-      result = result.resolve(pathComponents[i]);
+      try {
+        result = result.resolve(pathComponents[i]);
+      } catch (Exception e) {
+        // unlikely to happen
+        throw new RuntimeException(e);
+      }
     }
 
     return result.toUri();
@@ -91,66 +94,83 @@ public class LocalFileSystemRepository implements BackupRepository {
 
   @Override
   public void createDirectory(URI path) throws IOException {
-    Files.createDirectory(Paths.get(path));
+    Path p = Path.of(path);
+    if (!Files.exists(p, LinkOption.NOFOLLOW_LINKS)) {
+      Files.createDirectory(p);
+    }
   }
 
   @Override
   public void deleteDirectory(URI path) throws IOException {
-    Files.walkFileTree(Paths.get(path), new SimpleFileVisitor<Path>() {
-      @Override
-      public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-        Files.delete(file);
-        return FileVisitResult.CONTINUE;
-      }
-
-      @Override
-      public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
-        Files.delete(dir);
-        return FileVisitResult.CONTINUE;
-      }
-    });
+    PathUtils.deleteDirectory(Path.of(path));
   }
 
   @Override
   public boolean exists(URI path) throws IOException {
-    return Files.exists(Paths.get(path));
+    return Files.exists(Path.of(path));
   }
 
   @Override
   public IndexInput openInput(URI dirPath, String fileName, IOContext ctx) throws IOException {
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(dirPath), NoLockFactory.INSTANCE)) {
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(dirPath), NoLockFactory.INSTANCE)) {
       return dir.openInput(fileName, ctx);
     }
   }
 
   @Override
   public OutputStream createOutput(URI path) throws IOException {
-    return Files.newOutputStream(Paths.get(path));
+    return Files.newOutputStream(Path.of(path));
   }
 
   @Override
   public String[] listAll(URI dirPath) throws IOException {
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(dirPath), NoLockFactory.INSTANCE)) {
+    // It is better to check the existence of the directory first since
+    // creating a FSDirectory will create a corresponds folder if the directory does not exist
+    if (!exists(dirPath)) {
+      return new String[0];
+    }
+
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(dirPath), NoLockFactory.INSTANCE)) {
       return dir.listAll();
     }
   }
 
   @Override
   public PathType getPathType(URI path) throws IOException {
-    return Files.isDirectory(Paths.get(path)) ? PathType.DIRECTORY : PathType.FILE;
+    return Files.isDirectory(Path.of(path)) ? PathType.DIRECTORY : PathType.FILE;
   }
 
   @Override
-  public void copyFileFrom(Directory sourceDir, String fileName, URI dest) throws IOException {
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(dest), NoLockFactory.INSTANCE)) {
-      dir.copyFrom(sourceDir, fileName, fileName, DirectoryFactory.IOCONTEXT_NO_CACHE);
+  public void copyIndexFileFrom(
+      Directory sourceDir, String sourceFileName, URI destDir, String destFileName)
+      throws IOException {
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(destDir), NoLockFactory.INSTANCE)) {
+      copyIndexFileFrom(sourceDir, sourceFileName, dir, destFileName);
     }
   }
 
   @Override
-  public void copyFileTo(URI sourceDir, String fileName, Directory dest) throws IOException {
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(sourceDir), NoLockFactory.INSTANCE)) {
-      dest.copyFrom(dir, fileName, fileName, DirectoryFactory.IOCONTEXT_NO_CACHE);
+  public void copyIndexFileTo(
+      URI sourceDir, String sourceFileName, Directory dest, String destFileName)
+      throws IOException {
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(sourceDir), NoLockFactory.INSTANCE)) {
+      dest.copyFrom(dir, sourceFileName, destFileName, DirectoryFactory.IOCONTEXT_NO_CACHE);
+    }
+  }
+
+  @Override
+  public void delete(URI path, Collection<String> files, boolean ignoreNoSuchFileException)
+      throws IOException {
+    if (files.isEmpty()) return;
+
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(path), NoLockFactory.INSTANCE)) {
+      for (String file : files) {
+        try {
+          dir.deleteFile(file);
+        } catch (NoSuchFileException e) {
+          if (!ignoreNoSuchFileException) throw e;
+        }
+      }
     }
   }
 
